# assaia_connect4

./: Makefile  README.md  pyproject.toml
src/connect4/: app.py  config.py  engine.py  models.py  ui.py
src/connect4/entrypoints/: cli.py
